@@ -46,14 +46,14 @@ class Roda
         # Delegate the given methods to the request
         def request_delegate(*meths)
           meths.each do |meth|
-            define_method(meth){|*a, &block| request.send(meth, *a, &block)}
+            define_method(meth){|*a, &block| @_request.send(meth, *a, &block)}
           end
         end
 
         # Delegate the given methods to the response
         def response_delegate(*meths)
           meths.each do |meth|
-            define_method(meth){|*a, &block| response.send(meth, *a, &block)}
+            define_method(meth){|*a, &block| @_response.send(meth, *a, &block)}
           end
         end
       end
