@@ -51,7 +51,7 @@ class Roda
         def _route
           super
         rescue => e
-          response.status = 500
+          @_response.status = 500
           super{handle_error(e)}
         end
 
